# nxroms

./: .gitignore  README.md  entry.py  flake.nix  main.py  nca.py  pyproject.toml  test.py  utils.py
nxroms/: crypto.py  keyring.py  keys.py  nacp.py  readers.py  rom.py  utils.py
nxroms/binary/: repr.py  types.py
nxroms/fs/: entry.py  fs.py  nca_fs.py  pfs0.py  romfs.py
nxroms/nca/: __init__.py  header.py  nca.py
nxroms/rom/: nsp.py  rom.py  xci.py
nxroms/roms/: nsp.py  xci.py
rominfo/: keys.py  main.py  nca.py  readers.py  rom.py  utils.py
rominfo/fs/: fs.py  pfs0.py  romfs.py
rominfo/nca/: header.py  nca.py
